2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/att-regs.s: Remove a tab.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/expected_comparison_errors.s: Add more cases.
	* gas/bfin/expected_comparison_errors.l: Update accordingly.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/stack2.s: Add pop multiple instruction with a label
	on the same line.
	* gas/bfin/stack2.d: Adjust accordingly.

2009-08-31  Jan Beulich  <jbeulich@novell.com>

	* gas/elf/section5.l: Remove no longer issued warning pattern.

2009-08-29  Matt Fleming  <matt@console-pimps.org>

	* gas/sh/sign-extension.d: New file.
	* gas/sh/sign-extension.s: New file.
	* gas/sh/basic.exp: Run new test.

2009-08-28  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/l1om.d: Check elf64-l1om format.

2006-08-11  Bernd Schmidt  <bernd.schmidt@analog.com>

	* gas/bfin/parallel.s: Add more test cases.
	* gas/bfin/parallel.d: Update accordingly.
	* gas/bfin/resource_conflict.l: New test.
	* gas/bfin/resource_conflict.s: New test.
	* gas/bfin/bfin.exp: Add resource_conflict.

2009-08-11  Nick Clifton  <nickc@redhat.com>

	PR 10443
	* gas/arm/t16-bad.l: Update expected messages for moves with
	shifted operands.

2009-08-10  Daniel Gutson  <dgutson@codesourcery.com>

	PR gas/10479
	* gas/arm/sp-pc-usage-t.d: New test case.
	* gas/arm/sp-pc-usage-t.s: New file.

2006-08-09  Bernd Schmidt  <bernd.schmidt@analog.com>

	From Mike Frysinger <michael.frysinger@analog.com>
	* gas/bfin/reloc.d: Adjust for the renamed relocations.

2009-08-07  Daniel Jacobowitz  <dan@codesourcery.com>

	* gas/arm/mapping2.s: Test code after .ident.

2009-08-05  Chao-ying Fu  <fu@mips.com>

	* gas/mips/jal-svr4pic.d, gas/mips/jal-xgot.d,
	gas/mips/mips-abi32-pic2.d: Add R_MIPS_JALR relocations after jalr.

2009-08-04  Nathan Sidwell  <nathan@codesourcery.com>

	* gas/arm/missing.s: New.
	* gas/arm/missing.d: New.
	* gas/arm/missing.l: New.

2009-07-15  Daniel Gutson  <dgutson@codesourcery.com>