@@ -1,5 +1,13 @@
 2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* gas/i386/att-regs.s: Add ymm tests for 16bit and 64bit.
+	* gas/i386/intel-regs.s: Likewise.
+
+	* gas/i386/att-regs.d: Updated.
+	* gas/i386/intel-regs.d: Likewise.
+
+2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* gas/i386/att-regs.s: Remove a tab.
 
 2009-09-01  Jie Zhang  <jie.zhang@analog.com>
